--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,34 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="big_text">
+        Я помню чудное мгновенье:\n
+        Передо мной явилась ты,\n
+        Как мимолетное виденье,\n
+        Как гений чистой красоты.\n
+        \n
+        В томленьях грусти безнадежной,\n
+        В тревогах шумной суеты,\n
+        Звучал мне долго голос нежный\n
+        И снились милые черты.\n
+        \n
+        Шли годы. Бурь порыв мятежный\n
+        Рассеял прежние мечты,\n
+        И я забыл твой голос нежный,\n
+        Твои небесные черты.\n
+        \n
+        В глуши, во мраке заточенья\n
+        Тянулись тихо дни мои\n
+        Без божества, без вдохновенья,\n
+        Без слез, без жизни, без любви.\n
+        \n
+        Душе настало пробужденье:\n
+        И вот опять явилась ты,\n
+        Как мимолетное виденье,\n
+        Как гений чистой красоты.\n
+        \n
+        И сердце бьется в упоенье,\n
+        И для него воскресли вновь\n
+        И божество, и вдохновенье,\n
+        И жизнь, и слезы, и любовь.</string>
 </resources>
